🐛 fix: 1초 뒤에 로그인창 사라지는 부분 해결
로그인 모달이 작동하지 않던 문제를 script 파일 누락으로 인한 문제로 파악하고, 필요한 script 파일을 추가하여 문제를 해결했다.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>amazon clone</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/script.js"></script>
   </head>
   <body>
     <header>
@@ -67,7 +68,7 @@
               <span>모두</span>
             </a>
           </div>
-          <a href="">오늘의 딜</a>s
+          <a href="">오늘의 딜</a>
           <a href="">고객 서비스</a>
           <a href="">레지스트리</a>
           <a href="">기프트 카드</a>
