✨ feat: 배송처 호버 기능 구현
상세 스타일은 추후 적용 예정

--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
         <div class="nav-logo">
           <img src="./assets/logo.svg" />
         </div>
-
-        <div class="shipping-country">
-          <div class="shipping-container">
-            <img src="./assets/shipping.svg" alt="shipping" />
-            <span>배송처</span>
+        <div class="shipping">
+          <div class="shipping-country">
+            <div class="shipping-container">
+              <img src="./assets/shipping.svg" alt="shipping" />
+              <span>배송처</span>
+            </div>
+            <div class="country">대한민국</div>
           </div>
-          <div class="country">대한민국</div>
+
+          <div class="shipping-hover">
+            <div class="shipping-box">
+              <span>KR으로 배송할 품목을 표시하겠습니다. 다른 국가로 배송되는 품목을 보려면 배송 주소를 변경하십시오.</span>
+              <div><button class="button1">계속</button></div>
+              <div><button class="button1">주소변경</button></div>
+            </div>
+            <div class="shipping-pointer"></div>
+          </div>
         </div>
 
         <div class="search">
