--- a/index.html
+++ b/index.html
@@ -120,11 +120,72 @@
           <a href="">기프트 카드</a>
           <a href="">판매</a>
         </div>
+
         <div class="shop-deals">
           <a href="">지금 특가 상품 쇼핑하기</a>
         </div>
       </div>
     </header>
-    <aside></aside>
+    <aside>
+      <div class="sidebar">
+        <div class="sidebar-header">
+          <img src="./assets/login_icon.svg" />
+          <span>안녕하세요, 로그인</span>
+        </div>
+        <section>
+          <ul>
+            <li><div class="sidebar-menu">디지털 콘첸츠 및 기기</div></li>
+            <a href=""
+              ><li>
+                <div>Amazon Music</div>
+                <img src="./assets/arrow.svg" /></li
+            ></a>
+
+            <a href=""
+              ><li>
+                <div>Kindle E-Reader 및 도서</div>
+                <img src="./assets/arrow.svg" /></li
+            ></a>
+
+            <a href=""
+              ><li>
+                <div>안드로이드 앱스토어</div>
+                <img src="./assets/arrow.svg" /></li
+            ></a>
+          </ul>
+        </section>
+        <section>
+          <hr class="sidebar__line" />
+          <ul>
+            <li><div class="sidebar-menu">부서별 쇼핑</div></li>
+            <a href=""
+              ><li>
+                <div>전자</div>
+                <img src="./assets/arrow.svg" /></li
+            ></a>
+            <a href=""
+              ><li>
+                <div>컴퓨터</div>
+                <img src="./assets/arrow.svg" /></li
+            ></a>
+            <a href=""
+              ><li>
+                <div>Alexa 스마트 홈</div>
+                <img src="./assets/arrow.svg" /></li
+            ></a>
+            <a href=""
+              ><li>
+                <div>예술 및 공예</div>
+                <img src="./assets/arrow.svg" /></li
+            ></a>
+            <li>
+              <div>모두 보기</div>
+              <img src="./assets/arrow-bottom.svg" />
+            </li>
+          </ul>
+        </section>
+        <hr class="sidebar__line" />
+      </div>
+    </aside>
   </body>
 </html>
