♻️ refactor: 사이드바 항목 a 태그 삭제
사이드바에서 각 항목에 대한 링크를 줄 필요가 없다고 판단하여 a 태그 삭제

--- a/index.html
+++ b/index.html
@@ -134,50 +134,43 @@
         </div>
         <section>
           <ul>
-            <li><div class="sidebar-menu">디지털 콘첸츠 및 기기</div></li>
-            <a href=""
-              ><li>
-                <div>Amazon Music</div>
-                <img src="./assets/arrow.svg" /></li
-            ></a>
+            <li><div class="sidebar-menu">디지털 콘텐츠 및 기기</div></li>
+            <li>
+              <div>Amazon Music</div>
+              <img src="./assets/arrow.svg" />
+            </li>
 
-            <a href=""
-              ><li>
-                <div>Kindle E-Reader 및 도서</div>
-                <img src="./assets/arrow.svg" /></li
-            ></a>
+            <li>
+              <div>Kindle E-Reader 및 도서</div>
+              <img src="./assets/arrow.svg" />
+            </li>
 
-            <a href=""
-              ><li>
-                <div>안드로이드 앱스토어</div>
-                <img src="./assets/arrow.svg" /></li
-            ></a>
+            <li>
+              <div>안드로이드 앱스토어</div>
+              <img src="./assets/arrow.svg" />
+            </li>
           </ul>
         </section>
         <section>
           <hr class="sidebar__line" />
           <ul>
             <li><div class="sidebar-menu">부서별 쇼핑</div></li>
-            <a href=""
-              ><li>
-                <div>전자</div>
-                <img src="./assets/arrow.svg" /></li
-            ></a>
-            <a href=""
-              ><li>
-                <div>컴퓨터</div>
-                <img src="./assets/arrow.svg" /></li
-            ></a>
-            <a href=""
-              ><li>
-                <div>Alexa 스마트 홈</div>
-                <img src="./assets/arrow.svg" /></li
-            ></a>
-            <a href=""
-              ><li>
-                <div>예술 및 공예</div>
-                <img src="./assets/arrow.svg" /></li
-            ></a>
+            <li>
+              <div>전자</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>컴퓨터</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>Alexa 스마트 홈</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>예술 및 공예</div>
+              <img src="./assets/arrow.svg" />
+            </li>
             <li>
               <div>모두 보기</div>
               <img src="./assets/arrow-bottom.svg" />
