--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <title>amazon clone</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <script src="./js/script.js"></script>
   </head>
   <body>
     <header>
@@ -152,7 +151,7 @@
           </ul>
         </section>
         <section>
-          <hr class="sidebar__line" />
+          <hr class="sidebar-line" />
           <ul>
             <li><div class="sidebar-menu">부서별 쇼핑</div></li>
             <li>
@@ -171,14 +170,93 @@
               <div>예술 및 공예</div>
               <img src="./assets/arrow.svg" />
             </li>
+            <div class="view-all-contents">
+              <li>
+                <div>모두 보기</div>
+                <img src="./assets/arrow-bottom.svg" />
+              </li>
+            </div>
+          </ul>
+        </section>
+        <hr class="sidebar-line" />
+        <section class="sidebar-other-contents">
+          <ul>
             <li>
-              <div>모두 보기</div>
-              <img src="./assets/arrow-bottom.svg" />
+              <div>자동차 용품</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>유아</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>뷰티 및 퍼스널 케어</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>여성 패션</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>여아용 의류</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>남아용 의류</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>건강 및 가정용품</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>가정 및 주방</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>산업용 및 과학용</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>여행 가방</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>영화 및 TV</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>애완동물 용품</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>소프트웨어</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>스포츠 및 야외활동</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>공구 및 주택 개조</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>장난감 및 게임</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>비디오 게임</div>
+              <img src="./assets/arrow.svg" />
+            </li>
+            <li>
+              <div>간단히 보기</div>
+              <img src="./assets/arrow.svg" />
             </li>
           </ul>
         </section>
-        <hr class="sidebar__line" />
       </div>
     </aside>
+    <script src="./js/script.js"></script>
   </body>
 </html>
