✨ feat: 사이드바 카테고리를 확장/축소할 수 있는 기능 추가

--- a/index.html
+++ b/index.html
@@ -107,21 +107,19 @@
 
       <div class="nav-main">
         <div class="nav-shop">
-          <div class="nav-sidebar">
-            <a href=""
-              ><img src="./assets/sidebar.svg" />
-              <span>모두</span>
-            </a>
+          <div class="nav-sidebar-button">
+            <img src="./assets/sidebar.svg" />
+            <span>모두</span>
           </div>
-          <a href="">오늘의 딜</a>
-          <a href="">고객 서비스</a>
-          <a href="">레지스트리</a>
-          <a href="">기프트 카드</a>
-          <a href="">판매</a>
+          <div>오늘의 딜</div>
+          <div>고객 서비스</div>
+          <div>레지스트리</div>
+          <div>기프트 카드</div>
+          <div>판매</div>
         </div>
 
         <div class="shop-deals">
-          <a href="">지금 특가 상품 쇼핑하기</a>
+          <div>지금 특가 상품 쇼핑하기</div>
         </div>
       </div>
     </header>
@@ -179,7 +177,7 @@
           </ul>
         </section>
         <hr class="sidebar-line" />
-        <section class="sidebar-other-contents">
+        <div class="sidebar-other-contents">
           <ul>
             <li>
               <div>자동차 용품</div>
@@ -249,12 +247,14 @@
               <div>비디오 게임</div>
               <img src="./assets/arrow.svg" />
             </li>
-            <li>
-              <div>간단히 보기</div>
-              <img src="./assets/arrow.svg" />
-            </li>
+            <div class="quick-view">
+              <li>
+                <div>간단히 보기</div>
+                <img src="./assets/arrow.svg" />
+              </li>
+            </div>
           </ul>
-        </section>
+        </div>
       </div>
     </aside>
     <script src="./js/script.js"></script>
