✨ feat: 사이드바 'x' 버튼 추가

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
     </header>
     <aside>
       <div class="sidebar">
+        <button class="sidebar-close-button">X</button>
         <div class="sidebar-header">
           <img src="./assets/login_icon.svg" />
           <span>안녕하세요, 로그인</span>
