✨ feat: 로그인 메뉴바 hover시 딤처리 적용
로그인 모달 창에서 메뉴바로 호버 기능 변경, JavaScript를 사용하여 요소의 클래스를 변경해 딤처리 효과를 적용하도록 수정

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
         </div>
       </div>
     </header>
+
+    <div class="dimmed"></div>
+
     <aside>
       <div class="sidebar">
         <button class="sidebar-close-button">X</button>
