♻️ refactor: 스크립트 코드 함수로 묶기, 파일 분리

--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
         </div>
       </div>
     </aside>
-    <script src="./js/script.js"></script>
+    <script src="./js/sidebar.js"></script>
+    <script src="./js/navigation.js"></script>
   </body>
 </html>
