--- a/index.html
+++ b/index.html
@@ -65,30 +65,9 @@
               <a href="">여기에서 시작합니다.</a>
             </div>
             <div class="login-hover-list">
-              <div class="hover-list1">
-                <ul>
-                  <li>귀하의 목록</li>
-                  <li>목록 생성</li>
-                  <li>목록 또는 레지스트리 찾기</li>
-                  <li>AmazonSmile 자선 품목 목록</li>
-                </ul>
-              </div>
-              <div class="hover-list2">
-                <ul>
-                  <li>계정</li>
-                  <li>계정</li>
-                  <li>주문</li>
-                  <li>권장 사항</li>
-                  <li>검색 기록</li>
-                  <li>워치리스트</li>
-                  <li>비디오 구매 및 대여</li>
-                  <li>Kindle 언리미티드</li>
-                  <li>콘텐츠 및 기기</li>
-                  <li>항목 구독 및 저장</li>
-                  <li>멤버십 및 구독</li>
-                  <li>음악 라이브러리</li>
-                </ul>
-              </div>
+              <ul class="hover-list1"></ul>
+
+              <ul class="hover-list2"></ul>
             </div>
 
             <div class="login-pointer"></div>
@@ -262,6 +241,7 @@
       </div>
     </aside>
     <script src="./js/sidebar.js"></script>
+    <script src="./js/data.js"></script>
     <script src="./js/navigation.js"></script>
   </body>
 </html>
