--- a/index.html
+++ b/index.html
@@ -66,10 +66,8 @@
             </div>
             <div class="login-hover-list">
               <ul class="hover-list1"></ul>
-
               <ul class="hover-list2"></ul>
             </div>
-
             <div class="login-pointer"></div>
           </div>
         </div>
@@ -160,84 +158,10 @@
           </ul>
         </section>
         <hr class="sidebar-line" />
-        <div class="sidebar-other-contents">
-          <ul>
-            <li>
-              <div>자동차 용품</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>유아</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>뷰티 및 퍼스널 케어</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>여성 패션</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>여아용 의류</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>남아용 의류</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>건강 및 가정용품</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>가정 및 주방</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>산업용 및 과학용</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>여행 가방</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>영화 및 TV</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>애완동물 용품</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>소프트웨어</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>스포츠 및 야외활동</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>공구 및 주택 개조</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>장난감 및 게임</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <li>
-              <div>비디오 게임</div>
-              <img src="./assets/arrow.svg" />
-            </li>
-            <div class="quick-view">
-              <li>
-                <div>간단히 보기</div>
-                <img src="./assets/arrow.svg" />
-              </li>
-            </div>
-          </ul>
-        </div>
+        <ul class="sidebar-other-contents">
+          <div class="quick-view">
+          </div>
+        </ul>
       </div>
     </aside>
     <script src="./js/sidebar.js"></script>
