♻️ refactor: 딤처리 효과 개선
- display:none->opacity:0으로 수정
- z-index 변수 지정
- 사이드바, 모달창에 대한 딤처리 완료
- 사이드바 애니메이션 효과 시간 수정

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <span>대한민국</span>
             </div>
           </div>
-          <div class="nav__modal shipping__modal">
+          <div class="nav__modal shipping__hover">
             <div class="shipping__box">
               <div>KR으로 배송할 품목을 표시하겠습니다. 다른 국가로 배송되는 품목을 보려면 배송 주소를 변경하십시오.</div>
               <div>
@@ -55,7 +55,7 @@
             <div class="sub__menu-bottom">계정 및 목록</div>
           </div>
 
-          <div class="nav__modal login__modal">
+          <div class="nav__modal login__modal hidden">
             <div><button class="modal__button login__button">로그인</button></div>
             <div class="login__modal-link">
               <span>기존 사용자가 아니십니까?</span>
@@ -70,7 +70,7 @@
               <span>기존 사용자가 아니십니까?</span>
               <a href="">여기에서 시작합니다.</a>
             </div>
-            <hr class="line"/>
+            <hr class="line" />
             <div class="login__modal-accountList">
               <ul class="list__items"></ul>
               <ul class="account__items"></ul>
@@ -106,7 +106,7 @@
       </div>
     </header>
 
-    <div class="dimmed"></div>
+    <div class="dimmed-layer"></div>
 
     <aside>
       <div class="sidebar">
