💄 style: 사이드바 버튼 수정
- 사이드바 닫는 버튼 텍스트에서 이미지로 수정
- 사이드바 카테고리 모두보기 아이콘 간격 조정

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
 
     <aside>
       <div class="sidebar">
-        <button class="sidebar__button-close">X</button>
+        <button class="sidebar__button-close">
+          <img src="./assets/sidebar_close_button.svg" />
+        </button>
         <div class="sidebar__header">
           <img src="./assets/sidebar_header_icon.svg" />
           <span>안녕하세요, 로그인</span>
@@ -153,10 +155,8 @@
               <img src="./assets/arrow.svg" />
             </li>
             <div class="sidebar__show-more">
-              <li>
-                <div>모두 보기</div>
-                <img src="./assets/arrow_down.svg" />
-              </li>
+              <span>모두 보기</span>
+              <img src="./assets/arrow_down.svg" />
             </div>
           </ul>
         </section>
