✨ feat: 사이드바 카테고리 목록 펼치기/접기 애니메이션 추가

--- a/index.html
+++ b/index.html
@@ -154,16 +154,21 @@
               <div>예술 및 공예</div>
               <img src="./assets/arrow.svg" />
             </li>
-            <div class="sidebar__show-more">
-              <span>모두 보기</span>
-              <img src="./assets/arrow_down.svg" />
-            </div>
           </ul>
         </section>
-        <hr class="sidebar__line" />
-        <ul class="sidebar__hidden-content">
+        <section>
+          <ul class="sidebar__category-items"></ul>
+          <div class="sidebar__category-open toggle">
+            <span>모두 보기</span>
+            <img src="./assets/arrow_down.svg" />
+          </div>
+          <div class="sidebar__category-close toggle">
+            <span>간단히 보기</span>
+            <img src="./assets/arrow_up.svg" />
+          </div>
+          <hr class="sidebar__line" />
           <div class="quick__view"></div>
-        </ul>
+        </section>
       </div>
     </aside>
   </body>
