--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
         <section>
           <ul>
-            <li><div class="sidebar__category-border">디지털 콘텐츠 및 기기</div></li>
+            <div class="sidebar__category-border">디지털 콘텐츠 및 기기</div>
             <li>
               <div>Amazon Music</div>
               <img src="./assets/arrow.svg" />
@@ -137,7 +137,7 @@
         <section>
           <hr class="sidebar__line" />
           <ul>
-            <li><div class="sidebar__category-border">부서별 쇼핑</div></li>
+            <div class="sidebar__category-border">부서별 쇼핑</div>
             <li>
               <div>전자</div>
               <img src="./assets/arrow.svg" />
